like counter function small css fixes

--- a/css/pages_style.css
+++ b/css/pages_style.css
@@ -147,6 +147,7 @@
   color: #ffffff;
 }
 .main__article--btn {
+  cursor: pointer;
   position: fixed;
   margin-left: -85px;
   bottom: 30px;
@@ -217,6 +218,8 @@
   position: absolute;
   top: 0px;
   display: none;
+  z-index: 10;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 #filter-button {
@@ -236,13 +239,18 @@
   text-align: left;
   padding: 0 20px;
   position: relative;
+  cursor: pointer;
+}
+#filter-button:hover {
+  background-color: #d3573c;
+  color: #000000;
 }
 
 #filter-button-arrow {
   position: absolute;
   right: 18px;
   top: 30px;
-  z-index: 10;
+  z-index: 11;
   transition-duration: 0.5s;
 }
 
@@ -250,8 +258,9 @@
   padding-top: 24px;
 }
 
-#time {
+#title {
   padding-bottom: 24px;
+  border-radius: 0 0 5px 5px;
 }
 
 [role=option] {
@@ -317,13 +326,14 @@
     height: 900px;
     padding: 0px 35px;
     position: relative;
+    filter: drop-shadow(-5px 10px 30px rgba(0, 0, 0, 0.25));
   }
 }
 .modal__overlay {
   display: none;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
@@ -334,24 +344,15 @@
   position: absolute;
   right: 26.5px;
   top: 26.5px;
-  width: 18.5px;
-  height: 19.5px;
-  opacity: 1;
   cursor: pointer;
 }
-.modal__close:before, .modal__close:after {
-  position: absolute;
-  left: 15px;
-  content: " ";
-  height: 26px;
-  width: 3px;
-  background-color: #fff;
-}
-.modal__close:before {
-  transform: rotate(45deg);
-}
-.modal__close:after {
-  transform: rotate(-45deg);
+@media (min-width: 1330px) {
+  .modal__close {
+    width: 42px;
+    height: 42px;
+    right: 35px;
+    top: 35px;
+  }
 }
 
 .form {
@@ -363,6 +364,7 @@
   line-height: 2.875rem;
   margin-top: 20px;
   margin-bottom: 26px;
+  font-weight: 400;
 }
 @media (min-width: 1330px) {
   .form__headline {
@@ -375,6 +377,7 @@
   font-weight: 400;
   font-size: 1.5rem;
   line-height: 1.9375rem;
+  font-weight: 400;
   color: #312e2e;
   margin-bottom: 6px;
 }
@@ -416,6 +419,7 @@
   }
 }
 .form__btn {
+  cursor: pointer;
   text-align: center;
   width: 170px;
   height: 35px;
@@ -434,6 +438,10 @@
     height: 70px;
     margin: 0;
   }
+}
+.form__btn:hover {
+  background-color: #d3573c;
+  color: #000000;
 }
 
 .gallery {
@@ -527,6 +535,16 @@
     width: 17px;
     height: 18px;
   }
+}
+
+.lightbox {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: white;
 }
 
 /*# sourceMappingURL=pages_style.css.map */
